# synthetic-data-gen

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mlflow.Dockerfile  pyproject.toml
scripts/: init-mlflow-db.sql  wait-for-it.sh
src/: main.py
src/api/: main.py  model_manager.py  schemas.py  services.py
src/generator/: __init__.py  core.py
src/model/: __init__.py  loader.py  train.py
src/monitor/: __init__.py  detect_drift.py
src/pipeline/: __init__.py  materialize_features.py
src/synthetic_pipeline/: generator.py  logging.py
src/synthetic_pipeline/db/: __init__.py  models.py  session.py
src/synthetic_pipeline/db/migrations/: 001_create_feature_snapshots.sql
src/synthetic_pipeline/models/: __init__.py  connection.py  record.py
src/ui/: Dockerfile  app.py  data_service.py  mlflow_utils.py
tests/: test_api.py  test_core_generator.py  test_feature_store.py  test_generator.py  test_loader.py  test_ui_data_service.py
